--- a/les4/2-1/mainn.css
+++ b/les4/2-1/mainn.css
@@ -4,24 +4,30 @@
         width: 100%;
     }
     #menu{
-        float: left;
         background: darkcyan;
-        width: 30%;
-        height: 800px;
-        margin-top: 20px;
-        margin-bottom: 20px;
+        width: 600px;
+        height: 750px;
+        margin-top: 10px;
     }
     .post{
         background: coral;
-        height: 300px;
-        margin-left: 32%;
-        margin-top: 5%;
+        width: 1300px;
+        height: 330px;
+        margin: 20px;
+    }
+    .posts {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+    }
+
+    .body {
+        display: flex;
+        flex-direction: row;
+        justify-content: start;
     }
     #footer{
-        position: fixed;
-        left: 0;
-        bottom: 0;
-        width: 100%;
-        height: 50px;
+        margin-top: 10px;
+        height: 70px;
         background: springgreen;
     }
