--- a/les8/css/style.css
+++ b/les8/css/style.css
@@ -68,11 +68,13 @@
     line-height: 32px;
     color: #45494F;
 }
-
+.first-screen-center {
+    margin-top: 200px;
+    margin-right: 110px;
+}
 @media screen and (max-width: 400px) {
     .first-screen-left h1 {
         font-size: 30px;
         line-height: 32px;
     }
-
 }
