--- a/les8/css/style.css
+++ b/les8/css/style.css
@@ -78,3 +78,17 @@
         line-height: 32px;
     }
 }
+.infoBlocks {
+    background: white;
+    width: 400px;
+    height: 140px;
+    border-radius: 12px;
+    display: flex;
+    justify-content: center;
+    font-size: 16px;
+}
+.infoBlocks img{
+    width: 50px;
+    height: 50px;
+    margin-right: 30px;
+}
