--- a/les8/css/style.css
+++ b/les8/css/style.css
@@ -92,3 +92,16 @@
     height: 50px;
     margin-right: 30px;
 }
+.pSettings p {
+    margin-top: 45px;
+}
+.parent {
+    position: absolute;
+    top: 40px;
+    left: 60px;
+}
+.child {
+    position: absolute;
+    top: 0;
+    left: 0;
+}
