--- a/les8/css/style.css
+++ b/les8/css/style.css
@@ -111,3 +111,21 @@
     margin-left: 16px;
     margin-top: 20px;
 }
+.divCards {
+    background: #0C5CD6;
+    width: 350px;
+    height: 50px;
+    text-align: center;
+    color: white;
+    border-radius: 10px;
+    margin-top: 10px;
+    line-height: 50px;
+    margin-left: 10px;
+}
+.kontaktButton {
+    background: #004FC7;
+    width: 200px;
+    height: 50px;
+    color: white;
+    border-radius: 10px;
+}
