--- a/les9/project.css
+++ b/les9/project.css
@@ -65,3 +65,11 @@
     background: #005BB9;
     border-radius: 6px;
 }
+.buyButton{
+width: 57px;
+height: 49px;
+left: 1565px;
+top: 383px;
+background: #005BB9;
+border-radius: 6px;
+}
