--- a/les9/project.css
+++ b/les9/project.css
@@ -137,3 +137,15 @@
     border-radius: 6px;
     color: #005BB9;
 }
+#emailSendButton{
+    width: 177px;
+    height: 40px;
+    left: 1460px;
+    top: 2789px;
+    background: #005BB9;
+    border-radius: 0px 6px 6px 0px;
+    color: white;
+}
+.socialRefs img{
+    margin-left: 30px;
+}
