--- a/les9/project.css
+++ b/les9/project.css
@@ -181,7 +181,12 @@
 #mobileButtons {
     display: none;
 }
-
+#mobileCenterBlock {
+    display: none;
+}
+#centerBlock {
+    display: block;
+}
 .whoButton {
     width: 241px;
     height: 55px;
@@ -241,7 +246,19 @@
 .socialRefs img {
     margin-left: 30px;
 }
-
+#mobileSalo {
+    display: none;
+    justify-content: center;
+    margin-top: 10px;
+}
+#mobileSalo button{
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 19px;
+    display: flex;
+    align-items: center;
+    color: #005BB9;
+}
 @media only screen and (max-width: 1280px) and (max-width: 1920px) {
 
 }
@@ -303,5 +320,15 @@
     #mobileButtons {
         display: flex;
         margin-top: 20px;
+    }
+    #mobileCenterBlock {
+        display: block;
+        margin-top: 20px;
+    }
+    #centerBlock {
+        display: none;
+    }
+    #mobileSalo {
+        display: block;
     }
 }
